Fixing bug 58285. The various scroll methods on the window object need to flush pending layout notifications so that the presentation is up-to-date when the scolling is done. r=heikki@netscape.com, r=pollmann@netscape.com, sr=vidur@netscape.com